# smallEmail

./: README.md  gmailMonitor.hs  out
smallEmail/: Main.hs  ParseEmail.hs  Test.hs  devel.hs  email1.txt  email2.txt  gmailMonitor.hs  out  smallEmail.cabal
smallEmail/Handler/: Home.hs
smallEmail/config/: keter.yml  models  postgresql.yml  sqlite.yml
smallEmail/deploy/: Procfile
smallEmail/gmailMonitor/: ParseEmail.hs  gmailMonitor.hs
smallEmail/templates/: homepage.hamlet
