name:                smallEmail
version:             0.0.1
synopsis:            Remove attachments from emails, to conserve mailbox space
homepage:            https://github.com/MattWis/smallEmail
license:             MIT
author:              Matthew Wismer
maintainer:          mattwis86@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable smallEmail
  main-is:             Test.hs
  -- other-modules:
  build-depends:       base
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , persistent-postgresql
                     , monad-logger
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , mime-mail
                     , smtps-gmail
                     , HaskellNet
                     , HaskellNet-SSL
                     , classy-prelude
                     , parsec
                     , hspec
